@@ -1,3 +1,8 @@
+2010-04-02  Sam Steingold  <sds@gnu.org>
+
+	* vc-hg.el (vc-hg-push, vc-hg-pull): Use `apply' when calling
+	`vc-hg-command' with a list of flags.
+
 2010-04-02  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* tmm.el (tmm-get-keymap): Check with symbolp before passing
